[gd_scene load_steps=15 format=2]

[ext_resource path="res://Art/UI/Panel 2.png" type="Texture" id=1]
[ext_resource path="res://Art/UI/Red Button.png/0.png" type="Texture" id=2]
[ext_resource path="res://Art/UI/Green Button.png/1.png" type="Texture" id=3]
[ext_resource path="res://Art/UI/Green Button.png/2.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/Red Button.png/1.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/Green Button.png/0.png" type="Texture" id=6]
[ext_resource path="res://Art/UI/Red Button.png/2.png" type="Texture" id=7]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=8]
[ext_resource path="res://Fonts/at01.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 320, 30 ), Vector2( 112, 30 ) ]
}

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.341176 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 320.0
margin_top = 30.0
margin_right = 416.0
margin_bottom = 154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_right = 96.0
margin_bottom = 124.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 4.0
margin_right = -16.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/TextureRect/VBoxContainer"]
margin_right = 64.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 6 )
text = "PAUSE"
align = 1
valign = 1

[node name="ResumeButton" type="TextureButton" parent="MarginContainer/TextureRect/VBoxContainer"]
margin_top = 30.0
margin_right = 64.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/TextureRect/VBoxContainer/ResumeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetartButton" type="TextureButton" parent="MarginContainer/TextureRect/VBoxContainer"]
margin_top = 60.0
margin_right = 64.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/TextureRect/VBoxContainer/RetartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 3 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="MarginContainer/TextureRect/VBoxContainer"]
margin_top = 90.0
margin_right = 64.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 7 )

[node name="Label" type="Label" parent="MarginContainer/TextureRect/VBoxContainer/QuitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in = SubResource( 5 )
[connection signal="pressed" from="MarginContainer/TextureRect/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/VBoxContainer/RetartButton" to="." method="_on_RetartButton_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
